--- a/signup.html
+++ b/signup.html
@@ -65,26 +65,139 @@
         <option value="SSS Three">SSS 3</option>
     </select>
 </div>
-                            
-                            <!-- Subjects teaching using checkboxes -->
-                                               <!-- Subjects teaching using checkboxes -->
-                                               <div class="mb-3">
-                                                <label class="form-label">Subjects Teaching</label><br>
-                                                <div><small class="text-muted">Please select all the subjects you are currently teaching by checking the boxes below.</small></div>
-                                                <div class="form-check">
-                                                    <input class="form-check-input" type="checkbox" id="maths" name="subjects[]" value="Mathematics">
-                                                    <label class="form-check-label" for="maths">Mathematics</label>
-                                                </div>
-                                                <div class="form-check">
-                                                    <input class="form-check-input" type="checkbox" id="english" name="subjects[]" value="English">
-                                                    <label class="form-check-label" for="english">English</label>
-                                                </div>
-                                                <div class="form-check">
-                                                    <input class="form-check-input" type="checkbox" id="physics" name="subjects[]" value="Physics">
-                                                    <label class="form-check-label" for="physics">Physics</label>
-                                                </div>
-                                                <!-- Add more subjects as needed -->
-                                            </div>
+<div class="mb-3">
+    <label class="form-label">Subjects Teaching</label><br>
+    <div><small class="text-muted">Please select all the subjects you are currently teaching by checking the boxes below.</small></div>
+
+    <!-- Alphabetized list of Pre-Nursery, Nursery, Primary, and Secondary Subjects -->
+    <div class="form-check">
+        <input class="form-check-input" type="checkbox" id="agric-science" name="subjects[]" value="Agricultural Science">
+        <label class="form-check-label" for="agric-science">Agricultural Science</label>
+    </div>
+    <div class="form-check">
+        <input class="form-check-input" type="checkbox" id="basic-science" name="subjects[]" value="Basic Science">
+        <label class="form-check-label" for="basic-science">Basic Science</label>
+    </div>
+    <div class="form-check">
+        <input class="form-check-input" type="checkbox" id="biology" name="subjects[]" value="Biology">
+        <label class="form-check-label" for="biology">Biology</label>
+    </div>
+    <div class="form-check">
+        <input class="form-check-input" type="checkbox" id="chemistry" name="subjects[]" value="Chemistry">
+        <label class="form-check-label" for="chemistry">Chemistry</label>
+    </div>
+    <div class="form-check">
+        <input class="form-check-input" type="checkbox" id="computer-studies-primary" name="subjects[]" value="Computer Studies">
+        <label class="form-check-label" for="computer-studies-primary">Computer Studies</label>
+    </div>
+    <div class="form-check">
+        <input class="form-check-input" type="checkbox" id="creativity" name="subjects[]" value="Creativity">
+        <label class="form-check-label" for="creativity">Creativity</label>
+    </div>
+    <div class="form-check">
+        <input class="form-check-input" type="checkbox" id="cultural-and-creative-arts" name="subjects[]" value="Cultural and Creative Arts">
+        <label class="form-check-label" for="cultural-and-creative-arts">Cultural and Creative Arts</label>
+    </div>
+    <div class="form-check">
+        <input class="form-check-input" type="checkbox" id="civic-education" name="subjects[]" value="Civic Education">
+        <label class="form-check-label" for="civic-education">Civic Education</label>
+    </div>
+    <div class="form-check">
+        <input class="form-check-input" type="checkbox" id="economics" name="subjects[]" value="Economics">
+        <label class="form-check-label" for="economics">Economics</label>
+    </div>
+    <div class="form-check">
+        <input class="form-check-input" type="checkbox" id="english" name="subjects[]" value="English Language">
+        <label class="form-check-label" for="english">English Language</label>
+    </div>
+    <div class="form-check">
+        <input class="form-check-input" type="checkbox" id="government" name="subjects[]" value="Government">
+        <label class="form-check-label" for="government">Government</label>
+    </div>
+    <div class="form-check">
+        <input class="form-check-input" type="checkbox" id="health-education" name="subjects[]" value="Health Education">
+        <label class="form-check-label" for="health-education">Health Education</label>
+    </div>
+    <div class="form-check">
+        <input class="form-check-input" type="checkbox" id="literacy" name="subjects[]" value="Literacy">
+        <label class="form-check-label" for="literacy">Literacy</label>
+    </div>
+    <div class="form-check">
+        <input class="form-check-input" type="checkbox" id="literature" name="subjects[]" value="Literature in English">
+        <label class="form-check-label" for="literature">Literature in English</label>
+    </div>
+    <div class="form-check">
+        <input class="form-check-input" type="checkbox" id="mathematics" name="subjects[]" value="Mathematics">
+        <label class="form-check-label" for="mathematics">Mathematics</label>
+    </div>
+    <div class="form-check">
+        <input class="form-check-input" type="checkbox" id="numeracy" name="subjects[]" value="Numeracy">
+        <label class="form-check-label" for="numeracy">Numeracy</label>
+    </div>
+    <div class="form-check">
+        <input class="form-check-input" type="checkbox" id="phonics" name="subjects[]" value="Phonics">
+        <label class="form-check-label" for="phonics">Phonics</label>
+    </div>
+    <div class="form-check">
+        <input class="form-check-input" type="checkbox" id="physics" name="subjects[]" value="Physics">
+        <label class="form-check-label" for="physics">Physics</label>
+    </div>
+    <div class="form-check">
+        <input class="form-check-input" type="checkbox" id="rhymes" name="subjects[]" value="Rhymes">
+        <label class="form-check-label" for="rhymes">Rhymes</label>
+    </div>
+    <div class="form-check">
+        <input class="form-check-input" type="checkbox" id="science" name="subjects[]" value="Science">
+        <label class="form-check-label" for="science">Science</label>
+    </div>
+    <div class="form-check">
+        <input class="form-check-input" type="checkbox" id="social-studies" name="subjects[]" value="Social Studies">
+        <label class="form-check-label" for="social-studies">Social Studies</label>
+    </div>
+
+    <!-- Arabic and Islamic Studies (placed at the bottom) -->
+    <div class="form-check">
+        <input class="form-check-input" type="checkbox" id="arabic" name="subjects[]" value="Arabic">
+        <label class="form-check-label" for="arabic">Arabic (العربية)</label>
+    </div>
+    <div class="form-check">
+        <input class="form-check-input" type="checkbox" id="islamic-studies" name="subjects[]" value="Islamic Studies">
+        <label class="form-check-label" for="islamic-studies">Islamic Studies (الدراسات الإسلامية)</label>
+    </div>
+    <div class="form-check">
+        <input class="form-check-input" type="checkbox" id="quranic-studies" name="subjects[]" value="Quranic Studies">
+        <label class="form-check-label" for="quranic-studies">Quranic Studies (دراسات القرآن)</label>
+    </div>
+    <div class="form-check">
+        <input class="form-check-input" type="checkbox" id="tafsir" name="subjects[]" value="Tafsir">
+        <label class="form-check-label" for="tafsir">Tafsir (تفسير)</label>
+    </div>
+    <div class="form-check">
+        <input class="form-check-input" type="checkbox" id="hadith" name="subjects[]" value="Hadith">
+        <label class="form-check-label" for="hadith">Hadith (الحديث)</label>
+    </div>
+    <div class="form-check">
+        <input class="form-check-input" type="checkbox" id="fiqh" name="subjects[]" value="Fiqh">
+        <label class="form-check-label" for="fiqh">Fiqh (الفقه)</label>
+    </div>
+    <div class="form-check">
+        <input class="form-check-input" type="checkbox" id="seerah" name="subjects[]" value="Seerah">
+        <label class="form-check-label" for="seerah">Seerah (السيرة النبوية)</label>
+    </div>
+    <div class="form-check">
+        <input class="form-check-input" type="checkbox" id="aqeedah" name="subjects[]" value="Aqeedah">
+        <label class="form-check-label" for="aqeedah">Aqeedah (العقيدة)</label>
+    </div>
+    <div class="form-check">
+        <input class="form-check-input" type="checkbox" id="tajweed" name="subjects[]" value="Tajweed">
+        <label class="form-check-label" for="tajweed">Tajweed (التجويد)</label>
+    </div>
+    <div class="form-check">
+        <input class="form-check-input" type="checkbox" id="arabic-grammar" name="subjects[]" value="Arabic Grammar">
+        <label class="form-check-label" for="arabic-grammar">Arabic Grammar (النحو العربي)</label>
+    </div>
+</div>
+
                                             <!-- Classes teaching using checkboxes -->
                                          <!-- Classes teaching -->
                 <div class="mb-3">
