--- a/resultmanagement.html
+++ b/resultmanagement.html
@@ -345,7 +345,7 @@ button {
  
   <div class="container">
     <div id="resultManagementHeader" class="mt-5 text-center">
-        <h2>Result Management</h2>
+        <h2>Cumulative Result Entry</h2>
         <p> Login With Your Staff Credentials To Select your class and subject to enter student scores.</p>
     </div>
 
