--- a/staff_dashboard.html
+++ b/staff_dashboard.html
@@ -563,6 +563,21 @@ button {
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script>
+      function checkSessionStatus() {
+    fetch('/checkSession')
+        .then(response => response.json())
+        .then(data => {
+            if (!data.loggedin) {
+                alert("Session has expired. Please log in again.");
+                window.location.href = '/login'; // Redirect to the login page
+            }
+        })
+        .catch(error => console.error('Error checking session status:', error));
+}
+
+// Check the session status every 5 minutes (300000 milliseconds)
+setInterval(checkSessionStatus, 300000);
+
       function toggleNavbar() {
     const navbarNav = document.getElementById("navbarNav");
     const cancelButton = document.querySelector(".cancel-btn");
