--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -41,6 +41,9 @@
           <li class="nav-item">
             <a class="nav-link text-danger" id="resultManagementLink"  href="student_management.html">Students Management</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link text-danger" id="resultManagementLink"  href="staff_management.html">Staff Management</a>
+          </li>
           <!-- Logout -->
           <li class="nav-item">
             <a class="nav-link text-danger" href="#" onclick="logout()">Logout</a> <!-- Text-based logout -->
