--- a/student_management.html
+++ b/student_management.html
@@ -265,7 +265,9 @@ button {
           </li>
           <li class="nav-item">
               <a class="nav-link text-danger" href="student_management.html">Students Management</a>
-        
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-danger" id="resultManagementLink"  href="staff_management.html">Staff Management</a>
             </li>
       </ul>
       <button class="cancel-btn" style="display: none;" onclick="toggleNavbar()">✖</button> <!-- Cancel icon -->
@@ -283,7 +285,7 @@ button {
       </ul>
       <button class="btn btn-primary" onclick="window.location.href='add.html'">Add Student</button>
       <button class="btn btn-warning" onclick="window.location.href='edit.html'">Edit Student</button>
-      <button class="btn btn-info">View Students</button>
+      <button class="btn btn-info" onclick="window.location.href='view.html'">View Students</button>
     </div>
   </div>
   <br><br>
